--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.7.2
+ - Always show info for --domain-controller if provided
+ - Delete current host if no host specified to delete-computer
+ - Build and typo fixes
+
 0.7.1
  - Fix null pointer access
  - Tweak way we process CLDAP ping responses
