--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.7.5
+ - Don't use CLDAP when discovering an IPv6 address
+ - Place IPv6 addresses properly into our temp krb5.conf
+ - Limit number of discovered servers correctly
+ - Stop discovery when an LDAP search fails
+
 0.7.4
  - Correctly handle truncating long host names [#69016]
  - Try to contact all available addresses for discovery [#68110]
