--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.8.1
+ - Update keytab when computer password lifetime is zero
+ - Fix typo in man page
+
 0.8.0
  - Update keytab and computer account with 'adcli update' [#92908]
  - Automatic time limited updates of keytab [#93282]
